# ndb_first_stage

./: .gitignore  CMakeLists.txt  NDB_datatype  README.md  build_and_test.sh  design.md  generate_real_tpch_data.py  install_arrow.sh  intergrate.md  test_design.md
arrow-c/: abi.h  avx2_double_simd_sum.c  avx2_double_simd_sum.h  avx2_double_simd_sum.ll  main.c  pdqsort.c  pdqsort.h  pdqsort.ll  q1_incremental.c  q1_incremental.ll  q1_incremental_optimized.c  q1_incremental_optimized.ll  q1_onebatch_256_qsortfull.c  q6_incremental.c  q6_incremental.ll  q6_incremental_optimized.c  q6_incremental_optimized.ll  q6_onebatch.c  sharelib.sh
duckdb_test/: bench_duckdb_tpch.py
duckdb_test/bench_out/: results.csv  summary_avg.csv  summary_report.txt
duckdb_test/bench_out/prof_out/: agg_only_q1_sf1_e2e_20250903_144437_386434.json  agg_only_q1_sf1_e2e_20250903_144440_863046.json  agg_only_q1_sf1_e2e_20250903_144441_100652.json  agg_only_q1_sf1_e2e_20250903_144441_338339.json  agg_only_q1_sf1_e2e_20250903_144441_572603.json  agg_only_q1_sf1_e2e_20250903_144441_813126.json  agg_only_q1_sf1_e2e_20250903_144442_048378.json  agg_only_q1_sf1_e2e_20250903_144442_283931.json  agg_only_q1_sf1_exec_20250903_144442_632831.json  (+279 more)
include/: ndb_agg_callback.h  ndb_agg_callback_factory.h  ndb_agg_state.h  ndb_arrow_batch.h  ndb_arrow_column.h  ndb_batch_driver.h  ndb_filter_kernels_arrow.h  ndb_scan_runtime.h  ndb_selvec.h
llvm_jit/: JIT_BENCHMARK_GUIDE.md  Makefile  README_BENCHMARK.md  TESTING_GUIDE.md  benchmark_framework  benchmark_framework.c  build_complete.sh  complete_test_results_20250903_215000.csv  generate_summary.py  quick_test.sh  run_all_benchmarks.sh  summary_min.csv  summary_report.txt  test_all_complete.sh  test_optimization_levels.sh  test_simple  test_simple.c  tpch_jit_test  tpch_jit_test.c
llvm_jit/common/: filter_kernels.c  filter_kernels.ll  ndb_types.h  tpch_jit_driver.c
llvm_jit/pipelines/: agg_only_q1_pipeline.c  agg_only_q1_pipeline.ll  generate_all_ir.sh  q1_full_pipeline.c  q1_full_pipeline.ll  q6_full_pipeline.c  q6_full_pipeline.ll  scan_filter_q1_pipeline.c  scan_filter_q1_pipeline.ll  scan_filter_q6_pipeline.c  scan_filter_q6_pipeline.ll  sort_only_shipdate_pipeline.c  sort_only_shipdate_pipeline.ll
llvm_jit/q1/: generate_ir.sh  q1_batch_driver.c  q1_batch_driver.ll
llvm_jit/q6/: generate_ir.sh  q6_batch_driver.c  q6_batch_driver.ll
ndb_ch_test/: bench_clickhouse_e2e.py  bench_clickhouse_exec.py  bench_duckdb_e2e.py  bench_duckdb_exec.py
ndb_ch_test/bench_out_clickhouse_e2e/: results.csv  stdout_sf1_agg_only_q1_run1.txt  stdout_sf1_agg_only_q1_run2.txt  stdout_sf1_q1_full_run1.txt  stdout_sf1_q1_full_run2.txt  stdout_sf1_q6_full_run1.txt  stdout_sf1_q6_full_run2.txt  stdout_sf1_scan_filter_q1_run1.txt  stdout_sf1_scan_filter_q1_run2.txt  stdout_sf1_scan_filter_q6_run1.txt  stdout_sf1_scan_filter_q6_run2.txt  stdout_sf1_sort_only_shipdate_run1.txt  stdout_sf1_sort_only_shipdate_run2.txt  stdout_sf3_agg_only_q1_run1.txt  stdout_sf3_agg_only_q1_run2.txt  stdout_sf3_q1_full_run1.txt  stdout_sf3_q1_full_run2.txt  stdout_sf3_q6_full_run1.txt  stdout_sf3_q6_full_run2.txt  stdout_sf3_scan_filter_q1_run1.txt  stdout_sf3_scan_filter_q1_run2.txt  stdout_sf3_scan_filter_q6_run1.txt  stdout_sf3_scan_filter_q6_run2.txt  stdout_sf3_sort_only_shipdate_run1.txt  stdout_sf3_sort_only_shipdate_run2.txt  stdout_sf5_agg_only_q1_run1.txt  stdout_sf5_agg_only_q1_run2.txt  stdout_sf5_q1_full_run1.txt  stdout_sf5_q1_full_run2.txt  stdout_sf5_q6_full_run1.txt  stdout_sf5_q6_full_run2.txt  stdout_sf5_scan_filter_q1_run1.txt  stdout_sf5_scan_filter_q1_run2.txt  stdout_sf5_scan_filter_q6_run1.txt  stdout_sf5_scan_filter_q6_run2.txt  stdout_sf5_sort_only_shipdate_run1.txt  stdout_sf5_sort_only_shipdate_run2.txt  summary_avg.csv  summary_report.txt
ndb_ch_test/bench_out_clickhouse_exec/: results.csv  stdout_sf1.txt  stdout_sf3.txt  stdout_sf5.txt  summary_avg.csv  summary_report.txt
ndb_ch_test/bench_out_duckdb_e2e/: results.csv  summary_avg.csv  summary_report.txt
ndb_ch_test/bench_out_duckdb_exec/: results.csv  summary_avg.csv  summary_report.txt
src/: ndb_agg_callback_factory.c  ndb_arrow_batch.c  ndb_arrow_column.c  ndb_batch_driver_arrow.c  ndb_filter_kernels_arrow.c  ndb_parquet_reader_arrow.cpp  ndb_selvec.c
tests/: performance_benchmark.c  test_q1_agg_integration.c  test_q6_agg_integration.c  test_scan_filter_q1_arrow.c  test_scan_filter_q6_arrow.c
